# wows.openwg.utils

./: .gitignore  .gitmodules  .hgignore  AGENTS.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  appveyor.yml  build.bat  build.ps1  build_nowot.ps1
src/: CMakeLists.txt  dllmain.rc
src/_apps/: CMakeLists.txt  owg_bwxml_unpack.cpp  owg_wot_build_resmap.cpp  owg_wot_detect.cpp  owg_wot_extract_file.cpp  owg_wwise_convert_to_licensed.cpp  owg_wwise_convert_to_unlicensed.cpp  owg_wwise_info.cpp
src/_cmake/: cpm-avir.cmake  cpm-catch2.cmake  cpm-jsoncpp.cmake  cpm-lodepng.cmake  cpm-miniz.cmake  cpm-pugixml.cmake  cpm-stb.cmake
src/_demo/: CMakeLists.txt
src/_tests/: CMakeLists.txt  test_archive.cpp  test_bwxml.cpp  test_fs.cpp  test_image.cpp  test_json.cpp  test_network.cpp  test_string.cpp  test_wwise.cpp
src/_tests/assets/: environment.xml  environment_unpacked.xml  string_replace_1_after.txt  string_replace_1_before.txt  string_replace_2_after.txt  (+1 more)
src/archive/: CMakeLists.txt  api_archive.cpp  api_archive.h  api_archive.iss
src/bwxml/: BwDataElement.cpp  BwDataElement.h  BwPackedSection.cpp  BwXml.cpp  BwXml.h  api_bwxml.cpp  api_bwxml.iss
src/common/: api_common.cpp  api_common.h  api_common.iss  dllmain.cpp  dllmain.rc  encoding.cpp  encoding.h  filesystem.cpp  process.cpp  process.h  registry.cpp  registry.h  string.cpp  string.h  vector.cpp  vector.h  wine.cpp  wine.h
src/fs/: api_fs.cpp  api_fs.h  api_fs.iss  fs.cpp  fs.h  fs_search.cpp  fs_search.h
src/image/: api_image.cpp  api_image.h  api_image.iss  image_convert.cpp  image_convert.h  image_winapi.cpp  image_winapi.h
src/imagedraw/: api_imagedraw.cpp
src/inno/: api_inno.cpp  api_inno.h  api_inno.iss
src/json/: api_json.cpp  api_json.h  api_json.iss  json_utils.cpp  json_utils.h
src/module_imagedraw/: api_imagedraw.cpp  api_imagedraw.h  imagedraw.cpp  imagedraw.h
src/module_json/: api_json.cpp  api_json.h  json.cpp  json.h
src/module_unpack/: api_unpack.cpp  api_unpack.h  divider.cpp  divider.h
src/module_wotfinder/: api_wotfinder.cpp  api_wotfinder.h  wgc.h  wotclient.h  wotfinder.cpp
src/network/: api_network.cpp  api_network.h  api_network.iss  network_ping.cpp  network_ping.h  network_resolve.cpp  network_resolve.h
src/process/: api_process.cpp  api_process.iss  process_module.cpp  process_module.h
src/splashscreen/: api_splashscreen.cpp  api_splashscreen.h  api_splashscreen.iss  splashscreen.cpp  splashscreen.h
src/string/: api_string.cpp  api_string.h  api_string.iss  string.cpp  string.h  test_string.iss
src/test/: test_epilog.iss  test_prolog.iss  test_report.html
src/wine/: api_wine.cpp  api_wine.iss  wine.cpp
src/wot/: api_wot.cpp  api_wot.h  api_wot.iss  client_interface.h  client_version.cpp  client_version.h  client_wot.cpp  client_wot.h  launcher_factory.cpp  launcher_factory.h  launcher_interface.h  launcher_standalone.cpp  launcher_standalone.h  launcher_wgc.cpp
src/wwise/: api_wwise.cpp  api_wwise.h  api_wwise.iss  wwise_bank.cpp  wwise_bank.h  wwise_bank_section_bkhd.cpp  wwise_bank_section_type.h  wwise_license.cpp  wwise_license.h
src/xml/: api_xml.cpp  api_xml.h  api_xml.iss  xml_utils.cpp
src_cpp/: CMakeLists.txt  dllmain.cpp  dllmain.rc  resource.h
src_cpp/bwxml/: BwInputStream.h  BwPackedSection.h  BwStringTable.h  BwXml.cpp  api_bwxml.cpp  api_bwxml.h
src_cpp/cmake/: cpm-catch2.cmake  cpm-pugixml.cmake  cpm-stb.cmake
src_cpp/common/: api_common.cpp  api_common.h  encoding.cpp  encoding.h  filesystem.cpp  filesystem.h  process.cpp  registry.cpp  registry.h  string.cpp  string.h  vector.cpp  vector.h
src_cpp/demo/: CMakeLists.txt  wot.cpp  wwise_convert_to_unlicensed.cpp  wwise_convert_to_wg.cpp
src_cpp/fs/: api_fs.cpp  api_fs.h  fs.h
src_cpp/imagedraw/: api_imagedraw.h  imagedraw.cpp  imagedraw.h
src_cpp/json/: api_json.cpp  api_json.h  json_utils.cpp  json_utils.h
src_cpp/json_old/: api_json_old.cpp  api_json_old.h  json_utils.cpp  json_utils.h
src_cpp/module_bwxml/: BwDataDescriptor.h  BwDataElement.cpp  BwDataElement.h  BwInputStream.h  BwPackedSection.cpp  BwPackedSection.h  BwStringTable.h  BwXml.cpp  BwXml.h  api_bwxml.cpp  api_bwxml.h
src_cpp/module_imagedraw/: api_imagedraw.cpp  api_imagedraw.h  imagedraw.cpp  imagedraw.h
src_cpp/module_json/: api_json.cpp  api_json.h  json.cpp  json.h
src_cpp/module_process/: api_process.cpp  api_process.h  process.cpp  process.h  process_module.cpp  process_module.h
src_cpp/module_splashscreen/: api_splashscreen.cpp  api_splashscreen.h  splashscreen.cpp  splashscreen.h
src_cpp/module_wgc/: api_wgc.cpp  api_wgc.h  wgc.cpp  wgc.h  wgc_client.cpp  wgc_client.h  wgc_finder.cpp  wgc_finder.h  wgc_flavour.h
src_cpp/module_wine/: api_wine.cpp  api_wine.h  wine.cpp  wine.h
src_cpp/module_wot/: api_wot.cpp  api_wot.h  client_factory.cpp  client_factory.h  client_interface.h  client_wot.cpp  client_wot.h  launcher_factory.cpp  launcher_factory.h  launcher_interface.h  launcher_standalone.cpp  launcher_standalone.h  launcher_wgc.cpp  launcher_wgc.h  wotfinder.cpp
src_cpp/module_wotfinder/: api_wotfinder.cpp  api_wotfinder.h  wotclient.cpp  wotclient.h  wotfinder.cpp  wotfinder.h  wotlauncher.cpp  wotlauncher.h
src_cpp/network/: api_network.cpp  api_network.h  network_ping.cpp  network_ping.h  network_resolve.cpp  network_resolve.h
src_cpp/process/: api_process.h  process_module.cpp
src_cpp/splashscreen/: api_splashscreen.cpp  splashscreen.cpp
src_cpp/string/: api_string.h  string.cpp
src_cpp/tests/: CMakeLists.txt  bwxml.cpp  json.cpp  process.cpp  test_bwxml.cpp  test_json.cpp  test_string.cpp  test_wwise.cpp  test_xml.cpp  wot.cpp
src_cpp/wine/: api_wine.h  wine.h
src_cpp/wot/: api_wot.cpp  api_wot.h  client_factory.cpp  client_factory.h  client_interface.h  client_wot.cpp  client_wot.h  launcher_factory.cpp  launcher_standalone.cpp  launcher_wgc.cpp
src_cpp/wwise/: api_wwise.cpp  api_wwise.h  wwise_bank.h  wwise_bank_section_bkhd.cpp  wwise_bank_section_bkhd.h  wwise_bank_section_header.cpp  wwise_bank_section_header.h  wwise_utils.h
src_cpp/xml/: xml_utils.h
(+112 files in other folders)
